# om-update-config

./: CMakeLists.txt  om-update-config  system-update.logrotate  system-update.service  system-update.timer  update-system
src/: CMakeLists.txt  MainDialog.cpp  MainDialog.h  om-update-config.desktop
