find_package(Qt5 5.0 COMPONENTS Core Widgets REQUIRED)
set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(SOURCES MainDialog.cpp main.cpp)
add_executable(om-update-config-ui ${SOURCES})
qt5_use_modules(om-update-config-ui Core Widgets)
install(TARGETS om-update-config-ui DESTINATION bin)
install(FILES om-update-config.desktop DESTINATION share/applications)
install(FILES om-update-config.svg DESTINATION share/icons/hicolor/scalable/apps)
