find_package(Qt6 REQUIRED COMPONENTS Core Widgets)
qt_standard_project_setup()
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(SOURCES MainDialog.cpp main.cpp)
qt_add_executable(om-update-config-ui ${SOURCES})
target_link_libraries(om-update-config-ui PRIVATE Qt6::Core Qt6::Widgets)
install(TARGETS om-update-config-ui DESTINATION bin)
install(FILES om-update-config.desktop DESTINATION share/applications)
install(FILES om-update-config.svg DESTINATION share/icons/hicolor/scalable/apps)
